made some changes in tribute form

--- a/CodSoft_TributePage/style.css
+++ b/CodSoft_TributePage/style.css
@@ -5,27 +5,19 @@
 }
 html,
 body {
-  
   width: 100%;
   height: 100%;
   font-family: "Montserrat", sans-serif;
   font-family: "Poppins", sans-serif;
 }
 
-.bg-colorleft {
-  width: 50vw;
-  height: 35vh;
-  position: absolute;
-  left: 2%;
-}
 #img1 {
-  background-repeat: no-repeat;
-  left: 65%;
-  width: 550px;
+  left: 60%;
+  width: 30vw;
   border-radius: 20px;
   position: absolute;
   align-items: center;
-  top: 10vh;
+  top: 45px;
   transition: all 0.2s;
 }
 
@@ -34,64 +26,65 @@ body {
   box-shadow: -3px 1px 29.2px 4px rgb(129, 123, 123);
   /* transition: transform .2s; */
 }
-.sush-name {
+/* .sush-name {
   height: 50vh;
   width: 20vw;
   top: 40%;
+} */
+.bg-colorleft {
+  width: 50vw;
+  height: 35vh;
+  position: relative;
+  left: 3%;
+  top: 7%;
+  border: none;
+  padding: 2vh 2vw;
+  border-radius: 30px;
+  box-shadow: -3px 1px 29.2px 4px rgb(90, 109, 127);
 }
 #quote {
   position: absolute;
   left: 2vw;
-  font-size: 40px;
+  width: auto;
+  font-size: 5vh;
   font-weight: 300;
   color: rgb(10, 10, 10);
 }
 #name {
   font-size: 20px;
+  width: auto;
   font-weight: 600;
-  color: rgb(27, 27, 27);
   position: absolute;
-  left: 35vw;
-  top: 16vh;
+  left: 33vw;
+  top: 22vh;
+  color: rgb(27, 27, 27);
 }
 .first {
   height: 100vh;
   width: 100%;
   background: linear-gradient(90deg, rgb(107, 160, 183), rgb(234, 245, 248));
-  padding: 100px 0 0 0;
 }
-.bio{
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
+#bio {
   position: relative;
-  height: 45vh;
-  width: 55vw;
-  /* border: 2px solid red; */
-  top: 45%;
+  top: 10%;
   left: 5%;
-  border-radius: 12px;
-  /* text-align: center; */
-  box-shadow: -3px 1px 50.3px 15px rgb(104, 125, 129);
+  width: 50vw;
+  height: 50vh;
 }
 .biography {
-  position: absolute;
-  top:2%;
-  left: 30%;
-  height: 5vh;
   color: rgb(70, 70, 222);
   text-decoration: underline;
-  width: 30vw;
-  font-size: 6vh;
-  font-weight: 700;
-  /* text-align: center; */
+  text-align: center;
+  font-size: 35px;
+  font-weight: 800;
+  margin-bottom: 20px;
+}
+.biography::after {
+  text-decoration: dotted;
 }
 .bio-content {
-  height: 310px;
-  position: absolute;
-  top: 25%;
-  left: 2%;
-  width: 110vh;
+  height: 40vh;
+  max-width: 765px;
   font-size: 20px;
 }
 
@@ -99,11 +92,11 @@ body {
   border: 3px snow rgb(129, 123, 123);
   border-radius: 10px;
   box-shadow: -3px 1px 29.2px 4px rgb(129, 123, 123);
-  width: 28vw;
+  width: 30vw;
   height: auto;
   position: absolute;
-  top: 59vh;
-  left: 65vw;
+  top: 57%;
+  left: 60%;
   padding: 25px 0 20px 0;
 }
 #hobbies_heading {
@@ -119,7 +112,20 @@ body {
 .hobbies_items {
   font-weight: 200px;
 }
-
+#tribute {
+  position: absolute;
+  top: 1vh;
+  left: 95%;
+  display: inline-block;
+  font-size: 70px;
+  text-align: center;
+}
+#tribute_content {
+  height: 90vh;
+  writing-mode: vertical-rl;
+  text-orientation: upright;
+  width: 5vw;
+}
 .second {
   height: 100vh;
   position: relative;
@@ -130,13 +136,12 @@ body {
   background: linear-gradient(90deg, rgb(229, 229, 229), rgb(234, 245, 248));
 }
 .net_worth {
-  background-color: aliceblue;
+  background-color: rgb(0, 93, 174);
 }
 .worth_content {
-  background-color: brown;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-wrap: wrap;
 }
 .net_img {
   background-image: linear-gradient(
@@ -144,14 +149,13 @@ body {
     rgb(129, 170, 187),
     rgb(255, 255, 255)
   );
-  height: auto;
 }
 .net_content1 {
   background-color: white;
   padding: 25px;
   color: rgb(0, 138, 180);
-  align-items: center;
   font-weight: 600;
+  margin-top: 35vh;
 }
 #net_content1_para {
   background-color: azure;
@@ -160,9 +164,9 @@ body {
   padding: 10px;
 }
 #net_image {
-  width: 400px;
+  width: 350px;
   position: absolute;
-  top: 14vh;
+  top: 15vh;
   left: 64vw;
   transition: all 0.2s;
 }
@@ -174,7 +178,7 @@ body {
 .net_worth {
   font-size: 50px;
   font-weight: 700;
-  padding-top: 1vh;
+  padding: 5px;
   color: rgb(0, 106, 125);
   text-align: center;
   background-image: linear-gradient(
@@ -192,12 +196,12 @@ body {
 }
 .movies {
   display: grid;
-  padding-top: 25px;
   background-color: rgb(252, 252, 252);
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: 1fr 1fr 1fr;
   justify-items: center;
-  row-gap: 14px;
+  row-gap: 12px;
+  height: 88vh;
   column-gap: 12px;
 }
 
@@ -205,16 +209,17 @@ body {
   position: relative;
   background-color: rgb(154, 201, 203);
   box-shadow: -3px 1px 29.2px 4px rgb(154, 201, 203);
-  width: 23vw;
-  height: 22vh;
+  width: 96%;
+  height: 90%;
+  display: flex;
+  align-items: center;
   transition: all 0.2s;
 }
 .movie1:hover {
   scale: 1.01;
 }
-#movie_name {
-  margin-left: 180px;
-  margin-top: 20px;
+.movie_name {
+  margin-left: 170px;
 }
 #mov_img1,
 #mov_img2,
@@ -222,10 +227,10 @@ body {
 #mov_img4,
 #mov_img5,
 #mov_img6 {
-  height: 178px;
+  height: 19vh;
   position: absolute;
-  top: 5%;
-  left: 3%;
+  top: 15%;
+  left: 5%;
 }
 
 span {
@@ -249,40 +254,41 @@ span {
   position: absolute;
   display: inline-block;
   font-size: xxx-large;
+  text-decoration: underline;
 }
 .award {
   display: grid;
   position: relative;
-  height: 600px;
-  width: 100%;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  row-gap: 15px;
+  grid-template-rows: 1fr 1fr;
   column-gap: 15px;
+  row-gap: 20px;
   justify-content: start;
   top: 10%;
   justify-items: center;
 }
 
 .award1 {
-  background-color: rgb(196, 237, 244);
   width: 45vw;
+  border: 5px solid rgb(42, 124, 139);
+  border-radius: 10px;
+  box-shadow: -3px 1px 29.2px 4px rgb(42, 124, 139);
+  height: 40vh;
 }
 
-#award_img1 {
-  height: 200px;
-  width: 280px;
+.award_img1 {
+  width: 30vh;
   margin-top: 45px;
   margin-left: 30px;
   position: absolute;
   transition: all 0.2s;
 }
-#award_img1:hover {
+.award_img1:hover {
   scale: 1.01;
   box-shadow: -3px 1px 29.2px 4px rgb(98, 210, 239);
 }
-#aw_cont {
-  margin: 5vh 2vw 0 20vw;
+.aw_cont {
+  margin: 6vh 2vw 0 21vw;
   font-weight: 600;
 }
 
